--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@ examples/example_sdl2_opengl3/example_sdl2_opengl3
 examples/example_sdl2_sdlrenderer/example_sdl2_sdlrenderer
 /bin/
 /bin-int/
+/ImGui.vcxproj
